fix: Subtotal prices get squished on checkout pages for products with large titles [#2432]

--- a/assets/css/woocommerce-rtl.css
+++ b/assets/css/woocommerce-rtl.css
@@ -997,10 +997,6 @@ section.exclusive .tns-visually-hidden {
   text-transform: none;
 }
 
-.woocommerce-checkout #order_review {
-  word-break: break-word;
-}
-
 .place-order noscript {
   padding: 10px 0;
 }
