--- a/assets/scss/woocommerce/_checkout.scss
+++ b/assets/scss/woocommerce/_checkout.scss
@@ -306,10 +306,6 @@
 	font-weight: 400;
 	text-transform: none;
   }
-
-  #order_review {
-	word-break: break-word;
-  }
 }
 
 @mixin checkout--laptop() {
